Fixed new moive spill

--- a/src/App.css
+++ b/src/App.css
@@ -108,9 +108,11 @@ body {
 }
 
 .homePageContainer-rightSide {
+  /* position: relative; */
   position: fixed;
   right: 5%;
-  top: 5%;
+  top: 1%;
+  /* overflow: auto; */
 }
 .homePageContainer-rightSide-newMovieContainer {
   border: 1px solid white;
@@ -121,8 +123,9 @@ body {
 .selectedMovieContainer {
   border: 1px solid white;
   width: 600px;
+
   padding: 20px;
-  margin-top: 30px;
+  margin-top: 5px;
 }
 
 .singleMovieContainer {
@@ -358,4 +361,15 @@ body {
 }
 .moveToReports:hover {
   opacity: 1;
+}
+.newMovieDays {
+  display: flex;
+  flex-direction: row;
+}
+
+.newMovieDaysSingleMovie {
+  display: flex;
+  flex-direction: column;
+  padding: 4px;
+  margin: 4px;
 }
